# Xiphos

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.engine  README.md  Xiphos.spec  _audit_metrics.py  api_server.py  backtest.py  backtest_mahoraga.py  backtest_mahoraga_results.csv  backtest_results.csv  bump_fonts.js  debug_trades.py  deep_backtest_results.csv  deep_backtester.py  docker-compose.yml  dump.rdb  fix_defender.bat  fix_linters.py  install.bat  install.sh  launch.ps1  live_bot.py  logger_setup.py  ma_optimizer.py  mahoraga_adaptation_log.csv  main.py  mt5_executor.py  patch_tui.py  pyproject.toml  refactor_api_server.py  requirements.txt  run.bat  run_all.bat  run_tui.bat  setup.iss  state_manager.py  termux_install.sh  test_run.py  (+7 more)
.jules/: bolt.md
api/: manage.py  routes.py  websockets.py
bridge/: client.py  proxy.py  server.py
config/: prompts.yaml  settings.yaml
core/: config.py  correlation_engine.py  database.py  engine.py  llm.py  logger.py  mahoraga.py  oracle.py  paths.py  redis_client.py  security.py  state_manager.py
dashboard/: cli.py
execution/: connection.py  executor.py  orders.py  queue.py  trailing.py
indicators/: moving_averages.py
monitoring/: metrics.py  scheduler.py  telemetry.py
nginx/: default.conf
prometheus/: prometheus.yml
risk/: CorrelationGuard.py  RiskSlotManager.py  SignalPriorityEngine.py  correlation.py  priority.py  risk_manager.py  slots.py
storage/: database.py  xiphos.sqlite
strategies/: trend_following.py
tests/: mahoraga_backtester.py  test_config.py  (+1 more)
xiphos-tui/: Cargo.toml
xiphos-tui/src/: app.rs  main.rs  models.rs  network.rs  theme.rs  ui.rs
(+95 files in other folders)
