[project]
name = "xiphos"
version = "2.2.0"
description = "Institutional-Grade Algorithmic Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "MetaTrader5>=5.0.45; sys_platform == 'win32'",
    "textual>=0.60.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "APScheduler>=3.10.1",
    "loguru>=0.7.0",
    "pydantic>=2.4.2",
    "rich>=13.6.0",
    "PyYAML>=6.0.1",
    "fastapi",
    "uvicorn",
    "requests",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "google-genai>=0.2.0",
    "redis>=5.0.1",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
]
