[package]
name = "xiphos-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# No TLS: we only connect to ws://localhost - no crypto needed
tungstenite = { version = "0.29", default-features = false }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
